# viva_demo

./: README.md  package.xml  repos.yaml  setup.cfg  setup.py
config/: camera_override.yaml
launch/: inference.launch.py
viva_demo/: inference.py
